<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewCnx"
        android:id="@+id/textViewCnxId" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editTextCnxUserNameId"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/textViewEnrUserName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextCnxPaswId"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:hint="@string/textViewEnrUserPsw" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSaveCnx"
        android:id="@+id/checkBoxSaveCnxId" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCnxUserId"
        android:layout_gravity="center_horizontal"
        android:text="@string/textButtonCnxUserId"
        android:onClick="userCnx" />

</LinearLayout>