<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bd000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewEnrId"
        android:layout_marginTop="20dp"
        android:text="@string/textViewEnr"
        android:textColor="#ffffffff" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Utilisateur"
            android:id="@+id/textView7"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextIdUserId"
            android:hint="@string/textViewEnrUserId"
            android:textSize="15dp"
            android:textColor="#ffff2fe8"
            android:text="Utilisateur"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nom"
            android:id="@+id/textView8"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextEnrUserNameId"
            android:layout_marginLeft="10dp"
            android:hint="@string/textViewEnrUserName"
            android:textSize="15dp"
            android:textColor="#ffff2fe8" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prénom"
            android:id="@+id/textView9"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextPrenomId"
            android:layout_marginLeft="10dp"
            android:hint="@string/textViewEnrUserFirstame"
            android:textSize="15dp"
            android:textColor="#ffff2fe8" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Téléphone"
            android:id="@+id/textView10"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextTelId"
            android:layout_marginLeft="10dp"
            android:hint="@string/textViewEnrUserTel"
            android:textSize="15dp"
            android:textColor="#ffff2fe8" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mail"
            android:id="@+id/textView11"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextMailId"
            android:layout_marginLeft="10dp"
            android:hint="@string/textViewEnrUserMail"
            android:textSize="15dp"
            android:textColor="#ffff2fe8" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Site"
            android:id="@+id/textView12"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/textViewSiteId"
            android:layout_marginLeft="10dp"
            android:hint="@string/textViewEnrUserSite"
            android:textSize="15dp"
            android:textColor="#ffff2fe8" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Marque"
            android:id="@+id/textView18"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/textViewMarqueId"
            android:layout_marginLeft="10dp"
            android:hint="@string/textViewEnrUserMarque"
            android:textSize="15dp"
            android:textColor="#ffff2fe8" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Domaine métier"
            android:id="@+id/textView13"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/textViewDomaineMetierId"
            android:layout_marginLeft="10dp"
            android:hint="@string/textViewEnrUserDomaineMetier"
            android:textSize="15dp"
            android:textColor="#ffff2fe8" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Metier"
            android:id="@+id/textView14"
            android:textColor="#ffffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/textViewMetierId"
            android:layout_marginLeft="10dp"
            android:hint="@string/textViewEnrUserMetier"
            android:textSize="15dp"
            android:textColor="#ffff2fe8" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Etiquettes"
            android:id="@+id/textView15"
            android:textColor="#ffffffff"
            android:layout_marginLeft="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEtiquetteId"
            android:layout_marginLeft="10dp"
            android:hint="@string/textViewEnrUserEtiquette"
            android:ems="10"
            android:textSize="15dp"
            android:textColor="#ffff2fe8" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bureau"
            android:id="@+id/textView16"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/textViewTypeBureauId"
            android:layout_marginLeft="10dp"
            android:hint="@string/textViewEnrUserTypeBureau"
            android:textSize="15dp"
            android:textColor="#ffff2fe8" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Emplacement bureau"
            android:id="@+id/textView17"
            android:singleLine="false"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/textViewEmplacementBureauId"
            android:layout_marginLeft="10dp"
            android:hint="@string/textViewEnrUserEmplacementBureau"
            android:textSize="15dp"
            android:textColor="#ffff2fe8" />
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewEnrUserOffretBureau"
        android:id="@+id/checkBoxOffreBureauId"
        android:clickable="true"
        android:layout_alignParentRight="true"
        android:textSize="15dp"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textButtonEnrUserId"
        android:id="@+id/buttonEnrUserId"
        android:layout_gravity="center_horizontal"
        android:onClick="userEnr" />

</LinearLayout>
    </ScrollView>
